# zed

./: BENCHMARKS.md  BUILD.md  Cargo.toml  README.md
assets/keymaps/: default-macos.json
crates/acp_thread/src/: acp_thread.rs
crates/pdf_viewer/: Cargo.toml  README.md
crates/pdf_viewer/src/: document.rs  find.rs  find_ui.rs  glyph.rs  interaction.rs  pdf_viewer.rs  view.rs
crates/zed/: Cargo.toml
crates/zed/src/: main.rs  zed.rs
